# license_status

./: Cargo.toml  README.md  build.rs
src/: chkr.rs  main.rs
src/slint/: main.slint
