[package]
name = "license_status"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1.8.0" , default-features = false, features=["compat-1-2", "std", "backend-winit", "renderer-skia-opengl", "accessibility"]}
raw-window-handle = "0.6.1"
i-slint-backend-winit = "1.8.0"
open = "5.3.0"

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_System_Registry",
]

[build-dependencies]
slint-build = "1.8.0"
